@@ -1,11 +1,15 @@
 # -*- coding: utf-8 -*-
 
+2010-04-19  Eric Hodel  <drbrain@segment7.net>
+
+	* lib, test: Stop using Gem::RubyGemsVersion
+
 2010-04-14  James Tucker <jftucker@gmail.com>
 
 	* lib/rubygems/command_manager.rb: Now catches errors caused by command
 	  loading. (Protect against broken plugins)
-	* lib/rubygems.rb: Introduce and use Gem.load_plugins, RubyGems now protects
-	  against exceptions being raised by plugins.
+	* lib/rubygems.rb: Introduce and use Gem.load_plugins, RubyGems now
+	  protects against exceptions being raised by plugins.
 
 2010-03-25  Eric Hodel  <drbrain@segment7.net>
 
